[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Tuomas Peltonen <tuomas.j.j.peltonen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
